refactor: Refactor service and test classes